[package]
name = "mqui"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/jotrorox/mqui"

[dependencies]
eframe = "0.33.3"
egui = "0.33.3"
mqtt-endpoint-tokio = "0.6.5"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.dist]
inherits = "release"
lto = "thin"
