[package]
name = "mqui"
version = "0.2.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/jotrorox/mqui"

[dependencies]
eframe = "0.33.3"
egui = "0.33.3"
mqtt-endpoint-tokio = "0.6.5"
tokio = { version = "1.50.0", features = ["rt-multi-thread", "sync", "macros"] }
directories = "6"
rfd = "0.17.2"
rustls = { version = "0.23.37", default-features = false, features = ["ring", "std"] }
rustls-native-certs = "0.8.3"
rustls-pemfile = "2.2.0"
serde = { version = "1.0.228", features = ["derive"] }
tokio-tungstenite = "0.20.1"
toml = "1.0.3"
url = "2.5.7"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.dist]
inherits = "release"
lto = "thin"
